trunk/Archive/7c8ce0e523c950bfe4ff59ac4ec78c92-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:22:5: error: stray '\303' in program
     std::cout << sentence << std::endl; kjklé
     ^
main.cpp:22:5: error: stray '\251' in program
main.cpp: In function 'int main()':
main.cpp:22:41: error: 'kjkl' was not declared in this scope
     std::cout << sentence << std::endl; kjklé
                                         ^
main.cpp:23:1: error: expected ';' before '}' token
 }
 ^
